--- a/src/style.css
+++ b/src/style.css
@@ -122,18 +122,44 @@ form.create-note button {
 }
 
 
-.modal {
+.modal-overlay {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 20px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure it appears above other elements */
+}
+
+.modal {
+  background: white;
+  padding: 20px 30px;
+  border-radius: 10px;
+  text-align: center;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  border-radius: 8px;
-  z-index: 1000;
 }
 
 .modal button {
-  margin: 5px;
+  background-color: #f5ba13;
+  color: white;
+  border: none;
+  /* padding: 10px 20px; */
+  /* padding-right: 0px; */
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin: 10px;
+}
+
+.modal button:hover {
+  background-color: white;
+  color: #f5ba13;
+}
+
+.confirm {
+  padding: 10px 20px;
 }
